add anchor scrolling

--- a/src/app/bloggers-card/bloggers-card.component.css
+++ b/src/app/bloggers-card/bloggers-card.component.css
@@ -4,7 +4,7 @@
   font-weight: bold;
   font-size: 30px;
   line-height: 37px;
-  color: #EFF3F5;
+  color: #eff3f5;
   margin: 0 0 10px;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -21,14 +21,14 @@
   position: relative;
   z-index: 1;
   text-decoration: none;
-  transition: .2s all ease-in-out;
+  transition: 0.2s all ease-in-out;
   cursor: pointer;
 }
 
 .bloggers-card__link::before {
   content: "";
-  background: #6E105E;
-  opacity: .6;
+  background: #6e105e;
+  opacity: 0.6;
   height: 311px;
   position: absolute;
   z-index: -1;
@@ -104,7 +104,7 @@
   grid-template-columns: 250px 250px;
   gap: 30px 50px;
   padding-top: 30px;
-  border-bottom: 1px solid #EFF3F5;
+  border-bottom: 1px solid #eff3f5;
 }
 
 .bloggers-card__followers-count_location {
@@ -112,7 +112,7 @@
 }
 
 .bloggers-card__followers-count_location::after {
-  content: '+'
+  content: "+";
 }
 
 .bloggers-card__followers-count {
@@ -122,7 +122,7 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 24px;
-  color: #EFF3F5;
+  color: #eff3f5;
   margin-left: 10px;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -143,7 +143,7 @@
   font-size: 16px;
   line-height: 24px;
   letter-spacing: 0.05em;
-  color: #EFF3F5;
+  color: #eff3f5;
   margin-left: 10px;
 }
 
@@ -153,7 +153,7 @@
   font-weight: bold;
   font-size: 30px;
   line-height: 37px;
-  color: #EFF3F5;
+  color: #eff3f5;
   margin: 0 0 10px;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -167,7 +167,7 @@
   font-weight: bold;
   font-size: 30px;
   line-height: 37px;
-  color: #EFF3F5;
+  color: #eff3f5;
   margin: 0 0 10px;
 }
 
@@ -178,7 +178,7 @@
   font-size: 16px;
   line-height: 24px;
   letter-spacing: 0.05em;
-  color: #EFF3F5;
+  color: #eff3f5;
   margin: 0;
   max-height: 124px;
   padding-right: 10px;
@@ -205,12 +205,11 @@
 
 /* Handle */
 .blogger__channel-info_container::-webkit-scrollbar-thumb {
-  background: #EFF3F5;
+  background: #eff3f5;
   border-radius: 10px;
 }
 
 @media screen and (max-width: 1281px) {
-
   .bloggers-card__followers-icon_location {
     max-width: 50px;
   }
@@ -254,15 +253,12 @@
 }
 
 @media screen and (max-width: 1025px) {
-
   .bloggers-card__followers_location {
     grid-template-columns: 222px 222px;
   }
-
 }
 
 @media screen and (max-width: 769px) {
-
   .bloggers-card__link:hover .bloggers-card__info-container {
     box-shadow: inherit;
     display: block;
@@ -274,7 +270,7 @@
   }
 
   .bloggers-card__link:hover::before {
-    opacity: .6;
+    opacity: 0.6;
   }
 
   .card__title {
@@ -282,12 +278,6 @@
   }
 }
 
-@media screen and (max-width: 325px) {
-
-  .bloggers-card__link_location {
-    width: 320px;
-  }
-}
 .bloggers-card__list {
   grid-template-rows: auto;
   max-width: 1440px;
@@ -296,7 +286,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(311px, 1fr));
   grid-gap: 50px 20px;
-  border-bottom: 1px solid #EFF3F5;
+  border-bottom: 1px solid #eff3f5;
 }
 
 .bloggers-card__list-item {
@@ -376,7 +366,6 @@
   height: 4px;
 }
 
-
 .bloggers-card__list_location::-webkit-scrollbar-track {
   background: #969696;
   border-radius: 10px;
@@ -384,9 +373,8 @@
   margin-right: 500px;
 }
 
-
 .bloggers-card__list_location::-webkit-scrollbar-thumb {
-  background: #EFF3F5;
+  background: #eff3f5;
   border-radius: 10px;
 }
 
@@ -415,7 +403,6 @@
 }
 
 @media screen and (max-width: 910px) {
-
   .bloggers-card__list_location::-webkit-scrollbar-track {
     margin-left: 260px;
     margin-right: 260px;
@@ -428,11 +415,19 @@
   .bloggers-card__list-scrollbtn-right {
     right: 266px;
   }
+}
 
+@media screen and (max-width: 850px) {
+  .bloggers-card__list {
+    padding: 30px 0 40px;
+  }
+
+  .bloggers-card__list_location-container {
+    padding: 0 30px;
+  }
 }
 
 @media screen and (max-width: 670px) {
-
   .bloggers-card__list_location::-webkit-scrollbar-track {
     margin-left: 200px;
     margin-right: 200px;
@@ -445,10 +440,23 @@
   .bloggers-card__list-scrollbtn-right {
     right: 206px;
   }
+}
 
+@media screen and (max-width: 590px) {
+  .bloggers-card__list_location {
+    padding: 30px 0 40px;
+  }
 }
 
 @media screen and (max-width: 426px) {
+  .bloggers-card__list {
+    grid-gap: 20px 20px;
+    padding: 20px 0 40px;
+  }
+
+  .bloggers-card__list_location-container {
+    padding: 0 20px 0;
+  }
 
   .bloggers-card__list_location::-webkit-scrollbar-track {
     margin-left: 100px !important;
@@ -462,11 +470,9 @@
   .bloggers-card__list-scrollbtn-right {
     right: 106px;
   }
-
 }
 
 @media screen and (max-width: 378px) {
-
   .bloggers-card__list_location::-webkit-scrollbar-track {
     margin-left: 58px;
     margin-right: 58px;
@@ -479,36 +485,6 @@
   .bloggers-card__list-scrollbtn-right {
     right: 36px;
   }
-
-}
-
-@media screen and (max-width: 850px) {
-
-  .bloggers-card__list {
-    padding: 0 30px 50px;
-  }
-
-  .bloggers-card__list_location-container {
-    padding: 0 30px;
-  }
-}
-
-@media screen and (max-width: 590px) {
-  .bloggers-card__list_location {
-    padding: 30px 0 40px;
-  }
-}
-
-@media screen and (max-width: 426px) {
-
-  .bloggers-card__list {
-    grid-gap: 20px 20px;
-    padding: 0 20px 59px;
-  }
-
-  .bloggers-card__list_location-container {
-    padding: 0 20px 0;
-  }
 }
 
 @media screen and (max-width: 325px) {
@@ -516,9 +492,12 @@
     padding: 20px 0 40px;
   }
 
+  .bloggers-card__link_location {
+    width: 320px;
+  }
+
   .bloggers-card__list_location-container {
     padding: 0;
   }
 }
-
 
