--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -12,24 +12,24 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$hello-angular-app-primary: mat.define-palette(mat.$indigo-palette);
-$hello-angular-app-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$mainrasha-test-Angular-primary: mat.define-palette(mat.$indigo-palette);
+$mainrasha-test-Angular-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$hello-angular-app-warn: mat.define-palette(mat.$red-palette);
+$mainrasha-test-Angular-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$hello-angular-app-theme: mat.define-light-theme((
+$mainrasha-test-Angular-theme: mat.define-light-theme((
   color: (
-    primary: $hello-angular-app-primary,
-    accent: $hello-angular-app-accent,
-    warn: $hello-angular-app-warn,
+    primary: $mainrasha-test-Angular-primary,
+    accent: $mainrasha-test-Angular-accent,
+    warn: $mainrasha-test-Angular-warn,
   )
 ));
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include mat.all-component-themes($hello-angular-app-theme);
+@include mat.all-component-themes($mainrasha-test-Angular-theme);
 
